// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanField render() renders with form context 1`] = `
<div
  className="control-group checkbox"
>
  <div
    className="controls"
  >
    <label
      className="control-label"
    >
      <input
        checked={true}
        disabled={false}
        id="id-fieldName"
        onChange={[Function]}
        type="checkbox"
      />
    </label>
  </div>
</div>
`;

exports[`BooleanField render() renders without form context 1`] = `
<div
  className="control-group checkbox"
>
  <div
    className="controls"
  >
    <label
      className="control-label"
    >
      <input
        checked=""
        disabled={false}
        id="id-fieldName"
        onChange={[Function]}
        type="checkbox"
      />
    </label>
  </div>
</div>
`;
